# bc-encypter

./: CMakeLists.txt  README.md  main
include/bc-encrypter/: datatest.h
src/: main.cpp
test/: debugger.cpp
